--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ hs_err_pid*
 /TGIP2.iml
 /gestorPrueba.btree
 /.idea/
+/gestorPrueba1.btree
+/gestorPrueba1.dat
+/gestorPrueba123.btree
+/gestorPrueba123.dat
